--- a/style.css
+++ b/style.css
@@ -866,6 +866,11 @@ nav ul.nav-links li {
   z-index: 4;
   animation-delay: 5s;
 }
+.construction-container video {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
 
 /* Keep your keyframes */
 @keyframes dropFade {
