--- a/style.css
+++ b/style.css
@@ -1386,6 +1386,8 @@ footer {
     font-size: clamp(2.2rem, 4.5vw, 3.5rem);
   }
   h2.section-title {
+    padding-top: 20px;
+margin-bottom: 20px;
     font-size: clamp(1.8rem, 3.5vw, 2.5rem);
   }
   .content-section {
